deploy/infra/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: infra
  name: infra
spec:
  finalizers:
  - kubernetes
status:
  phase: Active
