deploy/infra/hello-app.yml
---
#kubectl create service clusterip nginx --tcp=80:80
apiVersion: v1
kind: Service
metadata:
  name: hello-service # for binding with ingress
spec:
  selector:
    app: hello-pod # equality of matchLabels, get target pods
  ports:
    - protocol: TCP
      port: 10080 # service port
      targetPort: 80 # pod port

---
#kubectl create deployment hello --image=billyangbc/hellodocker --replicas=2
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app # for binding with service
  labels:
    app: hello
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-pod
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: hello-pod
    spec:
      volumes:
        - name: log-vol
          emptyDir:
            sizeLimit: 50Mi
      containers:
      - name: hello-docker
        image: billyangbc/hellodocker:bookworm-arm64
        ports:
          - protocol: TCP
            containerPort: 80
        volumeMounts:
          - mountPath: "/log"
            name: log-vol
        resources:
          requests:
            memory: "32Mi"
            cpu: "125m"
          limits:
            memory: "64Mi"
            cpu: "250m"
        imagePullPolicy: IfNotPresent # This ensures that the image from the local cache is going to be used.
      restartPolicy: Always
