deploy/infra/mariadb.yaml
---
#kubectl create service clusterip nginx --tcp=3306:3306
apiVersion: v1
kind: Service
metadata:
  name: mariadb # for binding with ingress
spec:
  selector:
    app: mariadb # equality of matchLabels, get target pods
  ports:
    - protocol: TCP
      port: 3306 # service port
      targetPort: 3306 # pod port
  type: LoadBalancer

---
# mariadb-statefulset.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      volumes:
        - name: mariadb-storage
          persistentVolumeClaim:
            claimName: mariadb-pvc
        - name: config-volume
          configMap:
            name: mariadb-config
            items:
              - key: mariadb.cnf
                path: my-mariadb-config
      containers:
        - env:
            - name: MYSQL_ROOT_PASSWORD
              value: admin
            - name: MYSQL_PASSWORD
              value: db_pass
            - name: MYSQL_USER
              value: db_user
            - name: MYSQL_DATABASE
              value: mariadb
          image: yobasystems/alpine-mariadb
          name: mariadb
          ports:
            - containerPort: 3306
              protocol: TCP
          resources:
            requests:
              memory: "500Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mariadb-storage
            - name: config-volume
              mountPath: /etc/my.cnf.d/mariadb-server.cnf
              subPath: my-mariadb-config
      nodeSelector:
        disk: ssd
      restartPolicy: Always
