deploy/infra/mongo-express.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: mongo-express
  name: mongo-express
spec:
  ports:
    - name: "10081"
      port: 10081
      targetPort: 8081
  # update when using ingress
  type: LoadBalancer
  selector:
    app: mongo-express

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mongo-express
  name: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
        - env:
            - name: ME_CONFIG_BASICAUTH
              value: "false"
            - name: ME_CONFIG_MONGODB_ADMINPASSWORD
              value: admin
            - name: ME_CONFIG_MONGODB_ADMINUSERNAME
              value: admin
            - name: ME_CONFIG_MONGODB_SERVER
              value: mongo
            - name: ME_CONFIG_MONGODB_URL
              value: mongodb://admin:admin@mongo:27017/
          image: mongo-express
          name: mongo-express
          ports:
            - containerPort: 8081
              protocol: TCP
          resources:
            requests:
              memory: "500Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
      nodeSelector:
        disk: ssd
      restartPolicy: Always
