deploy/infra/nextcloud.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: nextcloud
  name: nextcloud
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 80
    - name: "8089"
      port: 8089
      targetPort: 443
  # update when using ingress
  type: LoadBalancer
  selector:
    app: nextcloud

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nextcloud
  name: nextcloud
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nextcloud
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
          image: nextcloud
          name: nextcloud
          ports:
            - containerPort: 80
              protocol: TCP
            - containerPort: 443
              protocol: TCP
          volumeMounts:
            - mountPath: /var/www/html
              name: nextcloud-pvc
          resources:
            requests:
              memory: "500Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
      nodeSelector:
        disk: ssd
      restartPolicy: Always
      volumes:
        - name: nextcloud-pvc
          persistentVolumeClaim:
            claimName: nextcloud-pvc
