deploy/infra/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: postgres
  name: postgres
  namespace:  infra
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  # update when using ingress
  type: LoadBalancer
  selector:
    app: postgres

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: postgres
  name: postgres
  namespace:  infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - env:
            - name: PGUSER
              value: db_user
            - name: POSTGRES_DB
              value: postgresdb
            - name: POSTGRES_PASSWORD
              value: db_pass
            - name: POSTGRES_USER
              value: db_user
          image: ankane/pgvector
          livenessProbe:
            exec:
              command:
                - pg_isready -d postgresdb -U db_user
            failureThreshold: 5
            periodSeconds: 5
            timeoutSeconds: 5
          name: postgres
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-pvc
            - mountPath: /docker-entrypoint-initdb.d/init.sql
              name: postgres-cm
              subPath: init.sql
          resources:
            requests:
              memory: "500Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
      nodeSelector:
        disk: ssd
      restartPolicy: Always
      volumes:
        - name: postgres-pvc
          persistentVolumeClaim:
            claimName: postgres-pvc
        - configMap:
            items:
              - key: postgres-init.sql
                path: init.sql
            name: postgres-cm
          name: postgres-cm
