deploy/infra/redis.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: redis
  name: redis
  namespace:  infra
spec:
  ports:
    - name: "6379"
      port: 6379
      targetPort: 6379
  # update when using ingress
  type: LoadBalancer
  selector:
    app: redis

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis
  name: redis
  namespace:  infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - image: redis
          name: redis
          ports:
            - containerPort: 6379
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: redis-pvc
          resources:
            requests:
              memory: "500Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
      nodeSelector:
        disk: ssd
      restartPolicy: Always
      volumes:
        - name: redis-pvc
          persistentVolumeClaim:
            claimName: redis-pvc
