deploy/infra/ingress.yaml
---
# ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cloud-local
  namespace:  infra
spec:
  ingressClassName: traefik
  rules:
  - host: pi5.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-service # service name
            port:
              number: 10080
  - host: mongo-express.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongo-express # mongo-express service name
            port:
              number: 10081
  - host: nextcloud.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nextcloud  # nextcloud service name
            port:
              number: 8080
